gccida/c0/name_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/name_p/src/cpplex.c:857:14: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
int  name_p( cpp_reader_0 *pfile, const cpp_string_0 *string) 
             ^~~~~~~~~~~~
             cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/name_p/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/name_p/src/cpplex.c:857:41: error: unknown type name 'cpp_string_0'; did you mean 'cpp_string'?
int  name_p( cpp_reader_0 *pfile, const cpp_string_0 *string) 
                                        ^~~~~~~~~~~~
                                        cpp_string
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/name_p/src/cpplib.h:41:27: note: 'cpp_string' declared here
typedef struct cpp_string cpp_string;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/name_p/src/cpplex.c:863:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[string->text[i]] & 0x204) == 0 && ( string->text[i] != 36 || !pfile->opts.dollars_in_ident) ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/name_p/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/name_p/src/obj/cpplex.o] Error 1
